--- a/gb/23/8/21/n14057769.md
+++ b/gb/23/8/21/n14057769.md
@@ -1,20 +1,22 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【健康养成记】长皱纹提早老化？这样做重训抗老除皱</h2>
-<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057774-1-600x400.jpg" />
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057774-1-600x400.jpg" />///image2=```diff
+- 中医认为皮肤老化氛围三层因素，示意图为面部的三个长皱纹明显的部位。（Ground Picture/shutter stock）
+```
 <h6>中医认为皮肤老化氛围三层因素，示意图为面部的三个长皱纹明显的部位。（Ground Picture/shutter stock）
 </h6>
 <hr>
-<p>医学美容发达的今天，想要抵<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%97%E8%80%81.md#1">抗老</a>化、消除<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%9A%B1%E7%BA%B9.md#1">皱纹</a>，除了医美动刀打针外，还有各类的保养品可供选择，但台湾鍼还中医诊所的黄献铭医师（阿铭师）却发现如今的人老化提早了一世代，30岁人已长出60岁人的皱纹。他认为，关键是脸骨结构，并提供四招强化脸骨，减缓衰老。</p>
-<figure id="attachment_14057777" aria-describedby="caption-attachment-14057777" style="width: 522px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14057777-2-600x399.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-14057777" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057777-2-600x399.jpg" alt="" width="522" b="347" /></a><figcaption id="caption-attachment-14057777" class="wp-caption-text">美容方法让你<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%99%A4%E7%9A%B1.md#1">除皱</a>卡关时，强化脸骨结构可能是另一个<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%8A%97%E8%80%81.md#1">抗老</a>方法，阿铭师提供四招强化脸骨结构，减缓老化。（健康养成记/大纪元）</figcaption></figure>
-<h2><span style="color: #188638;"><strong><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%9A%AE%E8%82%A4%E8%80%81%E5%8C%96.md#1">皮肤老化</a>三层次</strong></span></h2>
+<p>医学美容发达的今天，想要抵抗老化、消除皱纹，除了医美动刀打针外，还有各类的保养品可供选择，但台湾鍼还中医诊所的黄献铭医师（阿铭师）却发现如今的人老化提早了一世代，30岁人已长出60岁人的皱纹。他认为，关键是脸骨结构，并提供四招强化脸骨，减缓衰老。</p>
+<figure id="attachment_14057777" aria-describedby="caption-attachment-14057777" style="width: 522px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14057777-2-600x399.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class=" wp-image-14057777" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057777-2-600x399.jpg" alt="" width="522" b="347" /></a><figcaption id="caption-attachment-14057777" class="wp-caption-text">美容方法让你除皱卡关时，强化脸骨结构可能是另一个抗老方法，阿铭师提供四招强化脸骨结构，减缓老化。（健康养成记/大纪元）</figcaption></figure>
+<h2><span style="color: #188638;"><strong>皮肤老化三层次</strong></span></h2>
 <p>阿铭师表示，皮肤的老化并非单一表皮的因素，还与下列三层因素密切相关：</p>
-<p><strong>第一层 肌肉软组织丧失：</strong>皮肤下方的肌肉及胶原蛋白组织不够了，就像一个帐篷，没有背后的东西支撑，帐篷就容易塌下去、变皱，而脸部的<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%9A%B1%E7%BA%B9.md#1">皱纹</a>就是这样来的。</p>
+<p><strong>第一层 肌肉软组织丧失：</strong>皮肤下方的肌肉及胶原蛋白组织不够了，就像一个帐篷，没有背后的东西支撑，帐篷就容易塌下去、变皱，而脸部的皱纹就是这样来的。</p>
 <p><strong>第二层 血液循环不良：</strong>血液提供身体组织所需要的养分，当血液循环受影响，也代表身体的整体营养、脏腑与气血调和间出现问题，同时血液循环也与第三层的骨头结构有关系。</p>
 <p><strong>第三层 脸骨结构不佳：</strong>良好的骨骼支撑，会提供较佳的血液循环基础。血液循环是否良好除了跟心脏有关，也跟肌肉及筋膜的伸展与舒张有关，如果骨头的活动度不高，会阻挡深层筋膜的运动，连带造成血液循环不佳，血液无法把养分送到皮肤细胞，脸部筋膜缺乏养分时，也会弹性变差，再严重一点可能就造成左右肌肉不平衡，大小脸、凹凸脸就会产生。</p>
 <p>古人说：“户枢不蠹、流水不腐”，当脸骨活动度越来越差时，骨头上的软组织不生长、胶原蛋白流失，皮肤撑不起来，可预见的皱纹、下垂便紧接而生。</p>
-<figure id="attachment_14057778" aria-describedby="caption-attachment-14057778" style="width: 496px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14057778-3-600x598.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-14057778" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057778-3-600x598.jpg" alt="" width="496" b="494" /></a><figcaption id="caption-attachment-14057778" class="wp-caption-text"><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%9A%AE%E8%82%A4%E8%80%81%E5%8C%96.md#1">皮肤老化</a>有三层次，肌肉软组织丧失、血液循环不良及脸骨结构不佳。（健康养成记/大纪元）</figcaption></figure>
+<figure id="attachment_14057778" aria-describedby="caption-attachment-14057778" style="width: 496px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14057778-3-600x598.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class=" wp-image-14057778" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057778-3-600x598.jpg" alt="" width="496" b="494" /></a><figcaption id="caption-attachment-14057778" class="wp-caption-text">皮肤老化有三层次，肌肉软组织丧失、血液循环不良及脸骨结构不佳。（健康养成记/大纪元）</figcaption></figure>
 <h2><span style="color: #188638;"><strong>三因素让老化提早一世代</strong></span></h2>
 <p>阿铭师再进一步讲解，随着年纪增长，脸骨老化最常见的就是眼轮匝肌以下，到提上唇肌及颧大肌、颧小肌这个范围的脸骨萎缩及坍塌，就如同脸部骨质疏松症。由图示可见，当黄色区块的上颌骨左右不平衡、或关节缝弹性不佳、或萎缩时，不佳的血液循环无法提供苹果肌足够养份，就会让苹果肌的膨润度愈来愈小。</p>
 <p>一些脸部老化主要表现在：</p>
@@ -26,67 +28,57 @@
 <p>脸骨坍塌随着年纪愈来愈往内凹陷时，即使打进去多少医美填充物，可能效果都不佳，甚至有些人还会更垂，就是因为脸部的基底不等高、太凹，给脸部太多东西反而变成负担。</p>
 <p>● <strong>下巴削尖影响脸骨结构</strong></p>
 <p>现在不少女性透过削骨让脸型变成尖下巴。阿铭师表示，在脸骨结构整体上一定会有影响，这些疗程让脸在未来的5～10年内更容易下垂。其实就目前的西医研究，及他自己的临床经验已发现，当今的人，由于久坐、不运动，脸骨老化提前一世代，30岁女性已有这些问题产生。</p>
-<figure id="attachment_14057781" aria-describedby="caption-attachment-14057781" style="width: 521px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14057781-4-600x600.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-14057781" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057781-4-600x600.jpg" alt="" width="521" b="521" /></a><figcaption id="caption-attachment-14057781" class="wp-caption-text">皮肤塌陷路线图。（健康养成记/大纪元）</figcaption></figure>
+<figure id="attachment_14057781" aria-describedby="caption-attachment-14057781" style="width: 521px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14057781-4-600x600.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class=" wp-image-14057781" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057781-4-600x600.jpg" alt="" width="521" b="521" /></a><figcaption id="caption-attachment-14057781" class="wp-caption-text">皮肤塌陷路线图。（健康养成记/大纪元）</figcaption></figure>
 <h2><span style="color: #188638;"><strong>“脸部重训”招抗老防皱</strong></span></h2>
 <p>改善脸骨坍塌、凹陷的最好方法，就是帮脸部做重训，重训的压电效果，可以让骨质密度增加，更能维持骨头健康。阿铭师表示，脸部重训分两部分，一个是整体性，一个是局部性。</p>
 <p><strong>● 全身性重训</strong></p>
 <p>骨质疏松是全身整体性的，脸骨并不会独立于身体其它骨头而单独变差，除了口腔癌或者脑癌放射性治疗患者外，只要对全身做重训，脸骨的骨质密度与结构也可以增强。现在很多健身美女，年纪不小，仍拥有一副好身材及青春的高颜值。</p>
-<figure id="attachment_14057782" aria-describedby="caption-attachment-14057782" style="width: 523px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14057782-5-600x600.jpg" target="_blank" rel="noreferrer noopener"> <img class=" wp-image-14057782" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057782-5-600x600.jpg" alt="" width="523" b="523" /></a><figcaption id="caption-attachment-14057782" class="wp-caption-text">全身和局部重训共四招抗老防脸骨疏松。（健康养成记/大纪元）</figcaption></figure>
+<figure id="attachment_14057782" aria-describedby="caption-attachment-14057782" style="width: 523px" class="wp-caption aligncenter"><ahref=" https://i.epochtimes.com/assets/uploads/2023/08/id14057782-5-600x600.jpg" target="_blank" rel="noreferrer noopener"> <img loading="lazy" decoding="async" class=" wp-image-14057782" src="https://i.epochtimes.com/assets/uploads/2023/08/id14057782-5-600x600.jpg" alt="" width="523" b="523" /></a><figcaption id="caption-attachment-14057782" class="wp-caption-text">全身和局部重训共四招抗老防脸骨疏松。（健康养成记/大纪元）</figcaption></figure>
 <p><strong>● 局部性重训</strong></p>
 <p>针对脸部的肌肉做训练。阿明师建议可以透过训练咀嚼肌、舌肌以及叩齿达到脸部重训的效果。</p>
 <p>1.训练咀嚼肌：阿铭师认为，现在人脸部老化提早到30岁，跟咀嚼时间变少有关，愈来愈多的精致食物，让吃东西不需要过多的咀嚼，以前的人会吃鱿鱼丝、猪肉干、啃甘蔗等纤维质较多的强韧食物，增加咀嚼肌的力量。</p>
 <p>阿铭师建议，可以多吃有韧性、需要时间咀嚼的食物，如鱿鱼丝、猪肉干，咀嚼到嘴巴发酸。或是增加吃饭的咀嚼时间，一口饭嚼30下，细嚼慢咽不但对肠胃好，也能帮助脸部做肌肉训练。</p>
 <p>2.训练舌肌：阿铭师跟牙科医师赵哲旸开发了一套锻炼舌肌的舌头操，就是让舌头在口腔的三个地方划圈，分别是嘴唇跟牙齿中间、左脸颊与右脸颊，以正转跟反转各做10下，尽量放慢速度，让舌头能够划到每一个地方。舌肌训练不但可以帮助脸部肌肉更有力，对于睡觉打呼也有改善。</p>
 <p>3.叩齿：唐朝孙思邈在他的《<ahref="http://homepage.ntu.edu.tw/~staffclub/k-growing/13methods.md#1">养生十三法</a>》中提到，晨起叩齿三十六，到老牙不落。叩齿除了保健我们牙齿外，在叩齿的过程中，也会产生一些轻微的震动，因为骨头肌肉必须要有一些压力，才会有成长动力，每天清晨扣齿，好像脸部小重训般，让脸骨结构更稳固。◇</p>
-<p style="text-align: center;"><div class="video_fit_container"><a width="635" b="356" class="video_frame" src=""></a><a href="https://d2h2x8lw1kpl69.cloudfront.net/M2l12F1Uk"><img width="600" src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/NlyrN3M3Rg4?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
+<p style="text-align: center;"><div class="video_fit_container"><a loading="lazy" width="635" b="356" class="video_frame" src=""></a><a href="https://d2iiqnrx4rrboe.cloudfront.net/W7m12F1Uu"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/NlyrN3M3Rg4?wmode=transparent&#038;wmode=opaque" allowfullscreen></a>
 </div></p>
 <p>责任编辑：刘晓真</p>
-
 <hr>
-<hr>
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/6/25/n13767145.md#1">脸上7处皱纹是健康警讯！3方法让皱纹变少 还护内脏</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/8/6/n13796900.md#1">爱美人士看过来 这样睡觉会产生皱纹</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073249.md#1">无声延伸的奇迹——疾病源于生活习惯（上）</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/13/n14073227.md#1">无声延伸的奇迹——超越扁桃体</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/31/n14044839.md#1">头发因老化、压力变白后 何时可以逆转？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/23/n14040116.md#1">中医开具“换肤方3.0” 有效治疗长新冠皮肤搔痒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/7/8/n14030523.md#1">好皮肤是养出来的！5个简单要点延缓皮肤衰老</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/4/12/n13970832.md#1">五字秘诀自检皮肤癌 除了防晒 喝它也能预防</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/1/9/n13903175.md#1">不止消炎助消化 每天喝芦荟汁的9个理由</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/26/n13853286.md#1">脱发好烦恼 补充1类营养+1种茶饮可治疗</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/6/25/n13767145.md#1">脸上7处皱纹是健康警讯！3方法让皱纹变少 还护内脏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/8/6/n13796900.md#1">爱美人士看过来 这样睡觉会产生皱纹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/11/n14327952.md#1">常用电子产品容易引发肝斑？三疗法安全去斑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/28/n14319044.md#1">湿疹反复发作？中医教你改善体质排湿止痒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/10/n14308752.md#1">终结色斑 镭射除斑和有效防晒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309967.md#1">专家详析会传染的“足底疣”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/31/n14302393.md#1">脚趾钻心痛如踩石块 早发现用这一招预防</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/7/20/n14294455.md#1">五原因致湿疹 一饮食就让它消失 原因何在？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/6/6/n14265561.md#1">头发1年染几次好？皮肤科医生教你安全染发秘诀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/5/24/n14257411.md#1">老化导致头发脱落、变白 7种营养素让头发回春</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/31/n10010812.md#1" target="_blank">文武：反封建“等级制度”是典型的党文化</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/5/n10279698.md#1" target="_blank">百岁老人：法轮功延长了我的寿命</a></li><hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/12/28/n11751711.md#1" target="_blank">张林：青少年被迫加入抗美援朝志愿军</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/4/2/n8993904.md#1" target="_blank">【细语人生】见证大法的神奇（3）</a></li><hr>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14078897.md#1">【未解之谜】魏斯博士（上）看到地球未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075537.md#1">秋分：彼岸日 天地阴阳调和</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/31/n14064457.md#1">【古道人生】总督早年曾陷死刑 前未婚妻舍命相救</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020684.md#1">流落香港的“菠萝油公主”  天涯海角总有人伴你“等风来”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/21/n14078338.md#1">孔子追求的道与传下的道</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081502.md#1">【全球新闻】乌克兰宣布击毙俄国黑海舰队司令</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081067.md#1">【军事热点】俄军整建制部队有被围歼的危险</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/26/n14081872.md#1">【菁英论坛】袁世凯功过 七大改制 两大争议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14079992.md#1">王友群：灵隐寺迎外宾 习到底信什么？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/10/n14070676.md#1">燃油车vs混动车 最省油的15款2023年车型</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080447.md#1">【翻墙必看】韩正在美国遇到的惊人一幕</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080305.md#1">范冰冰任西班牙影展评审 开幕红毯造型成焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080342.md#1">为何不上常驻综艺？刘诗诗回应获夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081122.md#1">风头盖过发布会新品 刘德华代言华为惹议</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080763.md#1">KINGDOM新专辑封面引争议 销毁7万张重制</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081070.md#1">爱妻刘真过世三年半 辛龙获星友爆最新近况</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077809.md#1">胆固醇被冤枉了！医师揭心脏病罪魁祸首原来是它</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080133.md#1">如何加速新陈代谢来减肥？ 专家教你三招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080741.md#1">为何起床30分钟内别整理床铺？ 专家这么说</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080582.md#1">如何克服恐惧？ 专家教你三招</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/20/n14077924.md#1">秋天进补 喝乌骨鸡汤养血补虚劳</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341684.md#1">贞观圣主（10）：指鸟为鸾 正诛佞人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/28/n14340380.md#1">人生如戏岂堪嗟 —— 评电影《进京城》</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/8/6/1/n2138665.md#1">善有善报，拖久了还付利息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346859.md#1">【时事金扫描】克宫出大事 乌军黑了俄国电视网</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346853.md#1">【财经非常道】美非农报告亮眼 降息降多了？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343383.md#1">【全球新闻】超级飓风逼近佛州 百万人紧急撤离</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/3/n14343180.md#1">三款SUV秋季或大幅涨价 含畅销车丰田RAV4</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14345122.md#1">红三代炫富：过生日奶奶给1.8亿 存款逾24亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345627.md#1">中国经济大萧条 大量实体店十一门庭冷落</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14346019.md#1">投资3亿 刘德华新片《危机航线》或亏2亿</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345927.md#1">那英澳门开唱遇冷 “十一”说成“五一”惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345357.md#1">韩剧《冬季恋歌》电影版 明年秋天在日本上映</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346417.md#1">《派遣女医X》以电影版落幕 米仓凉子感性落泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/8/n14346747.md#1">《狮子吼》“十一”档上映 2人观影 票房79元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/6/n14344945.md#1">这一物可以让水龙头闪闪发光 你可能想不到</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/7/n14345615.md#1">如何去除家庭头号害虫——蟑螂？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/9/30/n14341564.md#1">苦瓜抗癌预防脂肪肝 一类人慎食</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/12/28/n14145199.md#1">长者自救锻炼法 逆转骨质疏松</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/9/n14346990.md#1">越南餐厅推出“珍珠奶茶牛肉面” 是啥味道？</a></li>
 <hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/21/n14057769.htm">【健康养成记】长皱纹提早老化？这样做重训抗老除皱</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/8/21/n14057769.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/21/n14057769.htm">【健康养成记】长皱纹提早老化？这样做重训抗老除皱</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/8/21/n14057769.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
